gateway_controller_testing/microservices/rabbitmq-queue/deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: rmq-service
spec:
  ports:
  - port: 5672
    name: amqp
  - port: 15672
    name: http
  selector:
    app: rabbitmq
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rabbitmq
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rabbitmq
  template:
    metadata:
      labels:
        app: rabbitmq
    spec:
      containers:
      - name: rabbitmq
        image: rabbitmq:4.0-management
        volumeMounts:
        - name: config-volume
          mountPath: /etc/rabbitmq/rabbitmq.conf
          subPath: rabbitmq.conf
        ports:
        - containerPort: 5672
        - containerPort: 15672
      volumes:
      - name: config-volume
        configMap:
          name: rabbitmq-config
