gateway_controller_testing/microservices/rabbitmq-queue/rabbitMQHTTPRoute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: rabbitmq-header-route
spec:
  parentRefs:
    - name: eg
  rules:
    - matches:
        - headers:
            - name: "topic"
              value: "sports"
      filters:
        - type: URLRewrite
          urlRewrite:
            path:
              type: ReplaceFullPath
              # Rewrite the path to hit the specific RabbitMQ API endpoint for that topic
              value: /api/exchanges/%2f/amq.topic/publish
      backendRefs:
        - name: rabbitmq
          port: 15672
